--- a/Front-end/src/app/pages/login/login.page.html
+++ b/Front-end/src/app/pages/login/login.page.html
@@ -1,9 +1,31 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>login</ion-title>
+    <ion-title style="font-size: 30px;">Login</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
+  <div class="centered-content">
+    <ion-card class="login">
+      <ion-card-header>
+        <ion-card-title class="center-item">Welcome to <br> Power Zone App</ion-card-title>
+      </ion-card-header>
 
+      <ion-card-content>
+        <form #f="ngForm" (ngSubmit)="onLogin(f)">
+          <ion-item>
+            <ion-icon name="mail-outline"></ion-icon>
+            <ion-input ngModel type="email" class="input" name="email_address" placeholder="Email Address" required></ion-input>
+          </ion-item>
+          <ion-item>
+            <ion-icon name="lock-closed-outline"></ion-icon>
+            <ion-input ngModel type="password" class="input" name="password" placeholder="Password" required></ion-input>
+          </ion-item>
+          <ion-button class="login-button" type="submit">Login</ion-button>
+          <br>
+        </form>
+        <ion-text [routerLink]="['/register']" class="gotoSignup">Not a member yet? Sign up here.</ion-text>
+      </ion-card-content>
+    </ion-card>
+  </div>
 </ion-content>
