connectd login page to the api

--- a/Front-end/src/app/pages/login/login.page.html
+++ b/Front-end/src/app/pages/login/login.page.html
@@ -24,7 +24,7 @@
           <ion-button class="login-button" type="submit">Login</ion-button>
           <br>
         </form>
-        <ion-text [routerLink]="['/register']" class="gotoSignup">Not a member yet? Sign up here.</ion-text>
+        <ion-text [routerLink]="['/signup']" class="gotoSignup">Not a member yet? Sign up here.</ion-text>
       </ion-card-content>
     </ion-card>
   </div>
