--- a/Front-end/src/app/pages/tab1/tab1.page.scss
+++ b/Front-end/src/app/pages/tab1/tab1.page.scss
@@ -6,3 +6,48 @@ ion-toolbar {
     font-family: Arial, Helvetica, sans-serif;
     font-weight: bold;
 }
+
+.center{
+    display: inline-block;
+    justify-content: center;
+    align-content: center;
+    align-items: center;    
+}
+
+.card_design {
+    display: inline-block;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    box-shadow: none;
+    vertical-align: middle;
+}
+
+.greeting {
+    text-align: center;
+    color: #000000;
+    font-style: italic;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-weight: bold;
+    font-size: 47px;
+    margin-bottom: 45px;
+}
+
+.quote {
+    text-align: center;
+    color: #000000;
+    font-style: italic;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: bold;
+    font-size: 40px;
+}
+
+.writer {
+    text-align: center;
+    color: #9E9E9E;
+    font-style: italic;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    font-weight: bold;
+    font-size: 25px;
+    margin-top: 30px;
+}
